Minor changes to tex file

--- a/results.tex
+++ b/results.tex
@@ -259,7 +259,7 @@ Then
     g_b(4n) &= b g_b(4n - 2)  &(n \geq 2)\\
     g_b(4n + 2) &= b g_b(4n) - (b - 1) g_b(2n) &(n \geq 1).
 \end{align*}
-
+/Users/charleskenney/Desktop/Screen\ Shot\ 2021-02-09\ at\ 3.24.06\ PM.png 
 For convenience, let $r_b(n) = g_b(2n)$, so that the recurrences read
 \begin{align*}
     r_b(1) &= b - 1 \\
