Add proof "TODO" note

--- a/results.tex
+++ b/results.tex
@@ -343,6 +343,9 @@ constant. In fact, it is a \emph{positive} constant.
     \end{equation*}
 \end{theorem}
 
+[TODO: This proof is not done! The theorem is surely true, but I haven't worked
+out a good base case yet.]
+
 \begin{proof}
     Given our previous proposition, it suffices to provide a positive lower
     bound for $r_b(n) / b^n$. We will prove something slightly stronger: There
